--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -10,7 +10,7 @@ concurrency:
 jobs:
   build: 
     # runs-on: macos-15
-    runs-on: ubuntu-24.04-m
+    runs-on: ubuntu-24.04-l
 
     steps:
     - run: df -h .
@@ -155,7 +155,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
-          cores: 4
+          cores: 8
           script: echo "Generated AVD snapshot for caching."
 
       - run: df -h .
@@ -168,7 +168,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          cores: 4
+          cores: 8
           script: |
             $ANDROID_HOME/platform-tools/adb install org.inaturalist.iNaturalistMobile-release.apk
             $HOME/.maestro/bin/maestro record e2e/maestro/android/smoke.yaml smoke.android.mp4 --local
