--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -81,7 +81,6 @@ jobs:
       with:
         gradle-version: '8.14.1'
         cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/android-ci-after-rn-upgrade' }}
-        cache-disabled: true
 
     - run: df -h .
 
@@ -147,6 +146,7 @@ jobs:
           disable-animations: true
           cores: 8
           script: |
+            $ANDROID_HOME/platform-tools/adb uninstall org.inaturalist.iNaturalistMobile
             $ANDROID_HOME/platform-tools/adb install org.inaturalist.iNaturalistMobile-release.apk
             $HOME/.maestro/bin/maestro record e2e/maestro/android/smoke.yaml smoke.android.mp4 --local
 
