--- a/e2e/maestro/android/smoke.yaml
+++ b/e2e/maestro/android/smoke.yaml
@@ -1,13 +1,16 @@
 appId: org.inaturalist.iNaturalistMobile
 ---
-- launchApp
+- launchApp:
+    appId: org.inaturalist.iNaturalistMobile
+    clearState: true
 
-# dismiss iNaturalist FTUE
 - extendedWaitUntil:
-    visible: "Continue"
-    timeout: 10000
-- tapOn: "Continue"
-- tapOn: "Continue"
-- tapOn: "Continue"
+    visible: "Close"
+    timeout: 30000
+
+- waitForAnimationToEnd:
+    timeout: 5000
+
+- tapOn: Close
 
 - assertVisible: Use iNaturalist to identify any living thing
