--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -172,7 +172,7 @@ jobs:
           disable-animations: true
           cores: 2
           script: |
-            $ANDROID_HOME/platform-tools/adb install -rd org.inaturalist.iNaturalistMobile-release.apk
+            $ANDROID_HOME/platform-tools/adb install -r org.inaturalist.iNaturalistMobile-release.apk
             $HOME/.maestro/bin/maestro record e2e/maestro/android/smoke.yaml smoke.android.mp4 --local
 
       - run: df -h .
