--- a/e2e/maestro/android/shareIntoApp_GoogleAPIs.yaml
+++ b/e2e/maestro/android/shareIntoApp_GoogleAPIs.yaml
@@ -1,7 +1,8 @@
 appId: org.inaturalist.iNaturalistMobile
 ---
 
-- tapOn: Chrome
+- launchApp:
+    appId: com.android.chrome
 
 # dismiss Google Chrome FTUE
 - runFlow:
