--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,8 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-# org.gradle.jvmargs=-Xmx8g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
-org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4608m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -26,8 +25,7 @@ android.useAndroidX=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-# reactNativeArchitectures=x86,arm64-v8a
-reactNativeArchitectures=x86
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
 # your application. You should enable this flag either if you want
