--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -174,7 +174,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ success() || failure() }}
         with:
-          path: signedOut.android.mp4
+          path: signedOut.mp4
           name: Android
 
   # notify:
