--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:memory": "jest --runInBand --logHeapUsage",
     "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop",
     "lint:fix": "npm-run-all lint:eslint:fix lint:flow lint:rubocop:fix",
-    "lint:staged:fix": "echo skipping lint",
+    "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
     "lint:flow": "flow check",
@@ -112,7 +112,7 @@
     "react-native-localize": "^3.5.2",
     "react-native-logs": "^5.3.0",
     "react-native-mail": "github:chirag04/react-native-mail",
-    "react-native-maps": "^1.26.18",
+    "react-native-maps": "1.20.1",
     "react-native-mmkv": "^3.3.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
