Introduce `tsc:lint:baseline` script to check TypeScript errors against a baseline.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:integration": "jest tests/integration",
     "test:clear": "jest --clearCache",
     "test:memory": "jest --runInBand --logHeapUsage",
-    "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop",
+    "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop lint:tsc:baseline",
     "lint:fix": "npm-run-all lint:eslint:fix lint:flow lint:rubocop:fix",
     "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
@@ -24,6 +24,7 @@
     "lint:rubocop": "bundle exec rubocop",
     "lint:rubocop:fix": "bundle exec rubocop -A",
     "lint:tsc": "tsc --allowJs false --noEmit",
+    "lint:tsc:baseline": "scripts/tsc-baseline.sh",
     "postinstall": "husky && patch-package",
     "translate": "babel-node src/i18n/i18ncli.js build",
     "prepare-fastlane-metadata": "babel-node src/i18n/i18ncli.js prepare-fastlane-metadata",
