--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -26,114 +26,114 @@ jobs:
             echo "is_SECRETS_PRESENT_set: ${{ env.SECRETS_PRESENT != '' }}"
             echo "::set-output name=is_SECRETS_PRESENT_set::${{ env.SECRETS_PRESENT != '' }}"
 
-  build:
-    needs: checksecret
-    if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
-    runs-on: macos-15
-    # Kill the task if not finished after 120 minutes
-    timeout-minutes: 120
+  # build:
+  #   needs: checksecret
+  #   if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
+  #   runs-on: macos-15
+  #   # Kill the task if not finished after 120 minutes
+  #   timeout-minutes: 120
 
-    steps:
-    - name: Check out Git repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
+  #   steps:
+  #   - name: Check out Git repository
+  #     uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 1
 
-    - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
+  #   - name: Install Node.js, NPM and Yarn
+  #     uses: actions/setup-node@v4
+  #     with:
+  #       node-version: 22
 
-    - name: Setup Ruby version according to .ruby-version with cached gems
-      uses: ruby/setup-ruby@v1
-      with:
-        bundler-cache: true        
+  #   - name: Setup Ruby version according to .ruby-version with cached gems
+  #     uses: ruby/setup-ruby@v1
+  #     with:
+  #       bundler-cache: true        
 
-    # - name: Cache node modules
-    #   uses: actions/cache@v4
-    #   id: cache
-    #   with:
-    #     path: node_modules
-    #     key: node-modules-${{ hashFiles('**/package-lock.json') }}
+  #   # - name: Cache node modules
+  #   #   uses: actions/cache@v4
+  #   #   id: cache
+  #   #   with:
+  #   #     path: node_modules
+  #   #     key: node-modules-${{ hashFiles('**/package-lock.json') }}
 
-    # - name: Rebuild detox from cache
-    #   if: steps.cache.outputs.cache-hit == 'true'
-    #   run: npx detox clean-framework-cache && npx detox build-framework-cache
+  #   # - name: Rebuild detox from cache
+  #   #   if: steps.cache.outputs.cache-hit == 'true'
+  #   #   run: npx detox clean-framework-cache && npx detox build-framework-cache
 
-    # # supposedly our current cache includes native modules like Realm
-    # # that have compiled binaries specific to the environment where they were installed
-    # # which might not be the same as the github actions environment
-    # # so we need to rebuild them
-    # - name: Rebuild native modules
-    #   if: steps.cache.outputs.cache-hit == 'true'
-    #   run: npm rebuild
+  #   # # supposedly our current cache includes native modules like Realm
+  #   # # that have compiled binaries specific to the environment where they were installed
+  #   # # which might not be the same as the github actions environment
+  #   # # so we need to rebuild them
+  #   # - name: Rebuild native modules
+  #   #   if: steps.cache.outputs.cache-hit == 'true'
+  #   #   run: npm rebuild
 
-    - name: Install Dependencies
-      run: npm install
+  #   - name: Install Dependencies
+  #     run: npm install
 
-    - name: Cache Pods
-      uses: actions/cache@v4
-      id: podcache
-      with:
-        path: ios/Pods
-        key: pods-${{ hashFiles('**/Podfile.lock') }}
+  #   - name: Cache Pods
+  #     uses: actions/cache@v4
+  #     id: podcache
+  #     with:
+  #       path: ios/Pods
+  #       key: pods-${{ hashFiles('**/Podfile.lock') }}
 
-    - name: Update Pods
-      run: |
-        gem update cocoapods xcodeproj
-        cd ios && pod install && cd ..
+  #   - name: Update Pods
+  #     run: |
+  #       gem update cocoapods xcodeproj
+  #       cd ios && pod install && cd ..
 
-    - name: Add secrets to GoogleService-Info.plist
-      env:
-        FIREBASE_STAGING_GOOGLE_APP_ID: ${{ secrets.FIREBASE_STAGING_GOOGLE_APP_ID }}
-        FIREBASE_STAGING_API_KEY: ${{ secrets.FIREBASE_STAGING_API_KEY }}
-      run: |
-        sed -i "" "s/your-google-app-id/${FIREBASE_STAGING_GOOGLE_APP_ID//\//\\/}/g" "ios/GoogleService-Info.example.plist"
-        sed -i "" "s/your-api-key/${FIREBASE_STAGING_API_KEY//\//\\/}/g" "ios/GoogleService-Info.example.plist"
+  #   - name: Add secrets to GoogleService-Info.plist
+  #     env:
+  #       FIREBASE_STAGING_GOOGLE_APP_ID: ${{ secrets.FIREBASE_STAGING_GOOGLE_APP_ID }}
+  #       FIREBASE_STAGING_API_KEY: ${{ secrets.FIREBASE_STAGING_API_KEY }}
+  #     run: |
+  #       sed -i "" "s/your-google-app-id/${FIREBASE_STAGING_GOOGLE_APP_ID//\//\\/}/g" "ios/GoogleService-Info.example.plist"
+  #       sed -i "" "s/your-api-key/${FIREBASE_STAGING_API_KEY//\//\\/}/g" "ios/GoogleService-Info.example.plist"
 
-    - name: Create GoogleService-Info.plist files from example
-      run: |
-        cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.staging.plist
-        cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.production.plist
+  #   - name: Create GoogleService-Info.plist files from example
+  #     run: |
+  #       cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.staging.plist
+  #       cp ios/GoogleService-Info.example.plist ios/GoogleService-Info.production.plist
 
-    # Generate the secret files needed for a test run
-    - name: Create .env file
-      env:
-        OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
-        OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
-        E2E_TEST_USERNAME: ${{ secrets.E2E_TEST_USERNAME }}
-        E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
-        JWT_ANONYMOUS_API_SECRET: ${{ secrets.JWT_ANONYMOUS_API_SECRET }}
-      run: |
-        printf 'API_URL=https://stagingapi.inaturalist.org/v2\nOAUTH_API_URL=https://staging.inaturalist.org\nJWT_ANONYMOUS_API_SECRET=%s\nOAUTH_CLIENT_ID=%s\nOAUTH_CLIENT_SECRET=%s\nE2E_TEST_USERNAME=%s\nE2E_TEST_PASSWORD=%s\nGMAPS_API_KEY=%s\nANDROID_MODEL_FILE_NAME=INatVision_Small_2_fact256_8bit.tflite\nANDROID_TAXONOMY_FILE_NAME=taxonomy.csv\nANDROID_GEOMODEL_FILE_NAME=INatGeomodel_Small_2_8bit.tflite\nIOS_MODEL_FILE_NAME=INatVision_Small_2_fact256_8bit.mlmodel\nIOS_TAXONOMY_FILE_NAME=taxonomy.json\nIOS_GEOMODEL_FILE_NAME=INatGeomodel_Small_2_8bit.mlmodel\nCV_MODEL_VERSION=small_2\n' \
-        "$JWT_ANONYMOUS_API_SECRET" \
-        "$OAUTH_CLIENT_ID" \
-        "$OAUTH_CLIENT_SECRET" \
-        "$E2E_TEST_USERNAME" \
-        "$E2E_TEST_PASSWORD" \
-        "$GMAPS_API_KEY" > .env
+  #   # Generate the secret files needed for a test run
+  #   - name: Create .env file
+  #     env:
+  #       OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
+  #       OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
+  #       E2E_TEST_USERNAME: ${{ secrets.E2E_TEST_USERNAME }}
+  #       E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
+  #       JWT_ANONYMOUS_API_SECRET: ${{ secrets.JWT_ANONYMOUS_API_SECRET }}
+  #     run: |
+  #       printf 'API_URL=https://stagingapi.inaturalist.org/v2\nOAUTH_API_URL=https://staging.inaturalist.org\nJWT_ANONYMOUS_API_SECRET=%s\nOAUTH_CLIENT_ID=%s\nOAUTH_CLIENT_SECRET=%s\nE2E_TEST_USERNAME=%s\nE2E_TEST_PASSWORD=%s\nGMAPS_API_KEY=%s\nANDROID_MODEL_FILE_NAME=INatVision_Small_2_fact256_8bit.tflite\nANDROID_TAXONOMY_FILE_NAME=taxonomy.csv\nANDROID_GEOMODEL_FILE_NAME=INatGeomodel_Small_2_8bit.tflite\nIOS_MODEL_FILE_NAME=INatVision_Small_2_fact256_8bit.mlmodel\nIOS_TAXONOMY_FILE_NAME=taxonomy.json\nIOS_GEOMODEL_FILE_NAME=INatGeomodel_Small_2_8bit.mlmodel\nCV_MODEL_VERSION=small_2\n' \
+  #       "$JWT_ANONYMOUS_API_SECRET" \
+  #       "$OAUTH_CLIENT_ID" \
+  #       "$OAUTH_CLIENT_SECRET" \
+  #       "$E2E_TEST_USERNAME" \
+  #       "$E2E_TEST_PASSWORD" \
+  #       "$GMAPS_API_KEY" > .env
 
-    # Download all linked model files not included in the repository (otherwise build will error out), requires .env file
-    - name: Download the example cv model and taxonomy file into the ios folder
-      run: npm run add-example-model
+  #   # Download all linked model files not included in the repository (otherwise build will error out), requires .env file
+  #   - name: Download the example cv model and taxonomy file into the ios folder
+  #     run: npm run add-example-model
 
-    # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
-    # This will be available for all subsequent steps
-    - name: Set MOCK_MODE to e2e
-      run: echo "MOCK_MODE=e2e" >> "$GITHUB_ENV"
+  #   # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
+  #   # This will be available for all subsequent steps
+  #   - name: Set MOCK_MODE to e2e
+  #     run: echo "MOCK_MODE=e2e" >> "$GITHUB_ENV"
 
-    - name: Build test app
-      run: xcodebuild -workspace ios/iNaturalistReactNative.xcworkspace -scheme iNaturalistReactNative -configuration Release -sdk iphonesimulator -derivedDataPath ios/build
+  #   - name: Build test app
+  #     run: xcodebuild -workspace ios/iNaturalistReactNative.xcworkspace -scheme iNaturalistReactNative -configuration Release -sdk iphonesimulator -derivedDataPath ios/build
 
-    - name: Upload iOS Detox app build
-      uses: actions/upload-artifact@v4
-      with:
-        name: detox_app
-        path: ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
-        retention-days: 5
+  #   - name: Upload iOS Detox app build
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: detox_app
+  #       path: ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
+  #       retention-days: 5
 
   test:
-    needs: build
+    # needs: build
     runs-on: macos-15
     # Kill the task if not finished after 120 minutes
     timeout-minutes: 120
@@ -148,6 +148,7 @@ jobs:
       uses: actions/download-artifact@v5
       with:
         name: detox_app
+        run-id: 19356143712
         path: ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
 
     - name: Install Node.js, NPM and Yarn
@@ -220,14 +221,23 @@ jobs:
         export MAESTRO_VERSION="2.0.8"; curl -Ls "https://get.maestro.mobile.dev" | bash
         echo "$HOME/.maestro/bin" >> "$GITHUB_PATH"
 
-    - name: Run e2e test
+    - uses: futureware-tech/simulator-action@v4
+      with:
+        model: 'iPhone 16 Pro'
+        os_version: '18.6'
+        wait_for_boot: true
+        erase_before_boot: false
+
+    - name: Run Maestro tests
+      env:
+        MAESTRO_CLI_NO_ANALYTICS: 1
+        MAESTRO_RECORD: true
       run: |
-        SIMULATOR_UDID=`xcrun simctl list -j | jq '.devices."com.apple.CoreSimulator.SimRuntime.iOS-18-6" | .[] | select(.name == "iPhone 16 Pro") | .udid'`
-        echo $SIMULATOR_UDID
-        
-        /Applications/Xcode.app/Contents/Developer/Applications/Simulator.app/Contents/MacOS/Simulator -CurrentDeviceUDID $SIMULATOR_UDID
-        xcrun simctl install $SIMULATOR_UDID ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
-        maestro record --local e2e/maestro/ios/linkIntoApp.yaml linkIntoApp.mp4
+        xcrun simctl install booted ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
+
+        maestro test e2e/maestro/shared/Launch.yaml --no-ansi
+        echo Maestro done
+
     
     # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
     - name: Store Detox artifacts on test failure
@@ -235,7 +245,7 @@ jobs:
       if: failure()
       with:
         name: detox-artifacts
-        path: linkIntoApp.mp4
+        path: Launch.mp4
         retention-days: 5
 
   # notify:
