--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -235,8 +235,8 @@ jobs:
 
     - name: Run Maestro tests
       env:
-        MAESTRO_DRIVER_STARTUP_TIMEOUT: 120000
-        MAESTRO_CLI_NO_ANALYTICS: 1
+        MAESTRO_DRIVER_STARTUP_TIMEOUT: 6000000
+        # MAESTRO_CLI_NO_ANALYTICS: 1
         MAESTRO_RECORD: true
       run: |
         echo installing...
@@ -244,7 +244,7 @@ jobs:
         echo installed!
 
         echo Maestro starting...
-        maestro test e2e/maestro/shared/signedOut.yaml --no-ansi --format JUNIT
+        MAESTRO_CLI_NO_ANALYTICS=1 maestro test e2e/maestro/shared/signedOut.yaml --no-ansi --format JUNIT
         echo Maestro done!
 
     - name: Store Detox artifacts on test failure
