--- a/.github/workflows/e2e_android.new.yml
+++ b/.github/workflows/e2e_android.new.yml
@@ -3,6 +3,7 @@ permissions:
   contents: read
 on:
   workflow_dispatch:
+  push:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
