--- a/.github/workflows/e2e_android.new.yml
+++ b/.github/workflows/e2e_android.new.yml
@@ -11,7 +11,7 @@ concurrency:
     
 jobs:
   build: 
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-24.04-m
 
     steps:
     - name: Check out Git repository
