--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,9 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm install
 
+    - name: Verify lockfile is up to date
+      run: git diff --exit-code package-lock.json
+
     # Need this for linting Ruby
     - name: Install Ruby and gems
       uses: ruby/setup-ruby@v1
