--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "glob": "^10.3.12",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.10",
     "jest-fetch-mock": "github:jefflau/jest-fetch-mock",
     "jest-slow-test-reporter": "^1.0.0",
     "nock": "^13.5.6",
