--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@
 name: Tests
 on:
   pull_request:
-  # push:
+  push:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -17,6 +17,18 @@ jobs:
     steps:
     - name: Check out Git repository
       uses: actions/checkout@v4
+
+    - name: Publish Test Report (canned, also see if two stack)
+      uses: ctrf-io/github-test-reporter@v1
+      with:
+        report-path: 'ctrf-report.json'
+        github-report: true
+        title: 'Unit & Integration Test Results'
+        test-list-report: true
+        suite-folded-report: true
+        suite-list-report: true
+        use-suite-name: true
+        test-report: true
 
     - name: Install Node.js, NPM and Yarn
       uses: actions/setup-node@v4
