MOB-1071 run lean detox once, retry once on failure with recordings / verbose logs

--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -220,7 +220,11 @@ jobs:
         curl -I --fail "https://stagingapi.inaturalist.org/v2/taxa"
 
     - name: Run e2e test
-      run: npm run e2e:test:ios -- --cleanup --take-screenshots failing --record-videos failing --record-logs all -l trace
+      run: npm run e2e:test:ios
+      
+    - name: Run e2e test (retry, with logs)
+      if: failure()
+      run: npm run e2e:test:ios -- --take-screenshots failing --record-videos failing --record-logs all -l trace
     
     # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
     - name: Store Detox artifacts on test failure
