--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.80.2",
+    "react-native": "0.81.5",
     "react-native-animated-dots-carousel": "^2.0.0",
     "react-native-audio-recorder-player": "^3.6.7",
     "react-native-bouncy-checkbox": "^3.0.7",
@@ -154,13 +154,13 @@
     "@babel/runtime": "^7.25.0",
     "@faker-js/faker": "^8.4.1",
     "@fluent/syntax": "^0.19.0",
-    "@react-native-community/cli": "19.1.2",
-    "@react-native-community/cli-platform-android": "19.1.2",
-    "@react-native-community/cli-platform-ios": "19.1.2",
-    "@react-native/babel-preset": "0.80.2",
-    "@react-native/eslint-config": "0.80.2",
-    "@react-native/metro-config": "0.80.2",
-    "@react-native/typescript-config": "0.80.2",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.81.5",
+    "@react-native/eslint-config": "0.81.5",
+    "@react-native/metro-config": "0.81.5",
+    "@react-native/typescript-config": "0.81.5",
     "@stylistic/eslint-plugin": "^3.1.0",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@testing-library/jest-native": "^5.4.3",
@@ -212,7 +212,7 @@
     "reassure": "^1.1.0",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "5.0.4",
+    "typescript": "^5.8.3",
     "yargs": "^17.7.2"
   },
   "overrides": {
