Refactor name to NativeNewsView

--- a/modules/native-screens/package.json
+++ b/modules/native-screens/package.json
@@ -9,7 +9,7 @@
     "jsSrcsDir": "src",
     "ios": {
       "componentProvider": {
-        "InaturalistMobileNativeScreensView": "InaturalistMobileNativeScreensView"
+        "NativeNewsView": "NativeNewsView"
       }
     }
   },
