Add a second native view (copy of news)

--- a/modules/native-screens/package.json
+++ b/modules/native-screens/package.json
@@ -9,7 +9,8 @@
     "jsSrcsDir": "src",
     "ios": {
       "componentProvider": {
-        "NativeNewsView": "NativeNewsView"
+        "NativeNewsView": "NativeNewsView",
+        "NativeAddToProjectsView": "NativeAddToProjectsView"
       }
     }
   },
