--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,4 +9,6 @@ project(':react-native-localize').projectDir = new File(rootProject.projectDir, 
 include ':react-native-pure-jwt'
 project(':react-native-pure-jwt').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-pure-jwt/android')
 include ':app'
+include ':inaturalist-mobile-native-screens:library'
+project(':inaturalist-mobile-native-screens:library').projectDir = new File(rootProject.projectDir, '../node_modules/inaturalist-mobile-native-screens/android/library')
 includeBuild('../node_modules/@react-native/gradle-plugin')
